Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9005

Regression: operator-> for nested template class is broken

    XMLWordPrintable

Details

    • 9c2a352027711519fb7dcc579f520717cd7ed115

    Description

      struct Foo { int foo; };
      
      template<class T>
      struct Outer
      {
        struct Nested
        {
          T *operator->() { return 0; }
        };
      };
      
      void bug()
      {
        Outer<Foo>::Nested nested;
        nested->foo; // Not highlighted
      }

      I thought it was covered in the autotests!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            erikv Erik Verbruggen
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes